--- a/static/style.css
+++ b/static/style.css
@@ -1,23 +1,27 @@
 p {
   text-align: right;
-  color: white;
+  color: #c1caa4;
   font-family: Arial, sans-serif;
   font-size: clamp(40px, 10vw, 150px);
   margin: 0;
 }
 
 body {
-  background-color: black;
+  background-color: #1c1c34;
   margin: 0;
   display: flex;
   height: 100vh;
+  width: 100vw;
   overflow: hidden;
 }
 
 .tile {
-  flex: 0 0 200px;
-  background: url('/static/tile-big.png') no-repeat center center;
+  width: 45vw;
+  height: 100vh;
+  flex-shrink: 0;
+  background: url('/static/tile-big.png') no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
 .name {
